# Stick-Pick

./: Cargo.toml  README.md  index.html
.cargo/: config.toml.txt
.github/workflows/: release.yaml
assets/: licenta_jam.map.json
assets/level/: links.txt
assets/maps/: licenta_jam.map.json
cli_template/: Cargo.toml
cli_template/src/: asset_tracking.rs  audio.rs  dev_tools.rs  lib.rs  main.rs
cli_template/src/menus/: credits.rs  main.rs  mod.rs  pause.rs  settings.rs  win.rs
cli_template/src/screens/: gameplay.rs  splash.rs
cli_template/src/theme/: interaction.rs  palette.rs  widget.rs
engine/: Cargo.toml
engine/src/: lib.rs  prelude.rs
game/: Cargo.toml
game/assets/audio/music/: links.txt
game/assets/audio/sound_effects/: links.txt
game/assets/level/bdragon/: link.txt
game/assets/maps/: licenta_jam.map.json  rage_game.ldtk
game/assets/maps/rage_game/backups/cfaf1b50-21a0-11f1-ac0c-df583c2dcdc5_2026-04-23_02-29-57_crash/: rage_game.ldtk
game/src/: animation.rs  camera.rs  level.rs  main.rs  movement.rs  player.rs  shake.rs
game/src/drag/: drag_helper.rs  drag_simulation.rs  mod.rs
game/src/level/: ldtk_entities.rs  mod.rs
game/src/player/: animation.rs  drag.rs  drag_helper.rs  drag_simulation.rs  mod.rs  movement.rs  physics.rs  physics_bundles.rs  sounds.rs
info/: compile.txt  web_guide.txt
src/: main.rs
src/game/: animation.rs  camera.rs  level.rs  mod.rs  movement.rs  player.rs
src/theme/: palette.rs
web/: index (copy).html  index.html
