[workspace]
members = ["game", "cli_template"]
resolver = "3"

[workspace.dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "2d",
    "mp3",
    "wav",
    "webgpu",
    "web",
] }
bevy_ecs_ldtk = "0.14.0"
bevy-inspector-egui = "0.36.0"
bevy_ecs_tilemap = "0.18.1"
bevy_firefly = "0.18.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1

# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# This profile will be used by `bevy run web` automatically.
[profile.web-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4

[profile.ci.package."*"]
opt-level = 0
